--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="html, css, javascript, jquery">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" type="image/jpg" href="images/4.jpg"/>
+...
     <link rel="stylesheet" href="css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
     <link rel="stylesheet" href="css/vendor/animate.min.css">
